# bt_api_gemini

./: README.md  mkdocs.yml  pyproject.toml
docs/: index.md
src/bt_api_gemini/: __init__.py  plugin.py  registry_registration.py
src/bt_api_gemini/containers/: __init__.py
src/bt_api_gemini/containers/balances/: __init__.py
src/bt_api_gemini/containers/bars/: __init__.py
src/bt_api_gemini/containers/orderbooks/: __init__.py
src/bt_api_gemini/containers/orders/: __init__.py
src/bt_api_gemini/containers/trades/: __init__.py
src/bt_api_gemini/errors/: __init__.py  gemini_translator.py
src/bt_api_gemini/exchange_data/: __init__.py
src/bt_api_gemini/feeds/live_gemini/: __init__.py  request_base.py  spot.py
src/bt_api_gemini/tickers/: __init__.py
tests/containers/bars/: test_gemini_bar.py
tests/containers/exchanges/: test_gemini_exchange_data.py
tests/containers/orderbooks/: test_gemini_orderbook.py
tests/containers/orders/: test_gemini_order.py
tests/containers/trades/: test_gemini_trade.py
tests/errors/: test_gemini_translator.py
tests/exchange_registers/: test_register_gemini.py
tests/feeds/: test_gemini_request_base.py
