[project]
name = "bt_api_gemini"
version = "0.1.0"
description = "Gemini exchange plugin for bt_api"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "cloudQuant", email = "yunjinqi@gmail.com"}
]
keywords = ["gemini", "exchange", "bt_api", "crypto", "trading"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "bt_api_base>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["I", "UP", "E", "F", "W", "TRY003"]
ignore = []

[tool.hatch.build.targets.wheel]
packages = ["src/bt_api_gemini"]
